; ModuleID = '/home/carl/AnghaBench/HandBrake/gtk/src/extr_callbacks.c_camel_convert.c'
source_filename = "/home/carl/AnghaBench/HandBrake/gtk/src/extr_callbacks.c_camel_convert.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @camel_convert to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @camel_convert(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  store i32 128, i32* %3, align 4
  %4 = load i8*, i8** %2, align 8
  %5 = icmp eq i8* %4, null
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  br label %57

7:                                                ; preds = %1
  br label %8

8:                                                ; preds = %54, %7
  %9 = load i8*, i8** %2, align 8
  %10 = load i8, i8* %9, align 1
  %11 = icmp ne i8 %10, 0
  br i1 %11, label %12, label %57

12:                                               ; preds = %8
  %13 = load i8*, i8** %2, align 8
  %14 = load i8, i8* %13, align 1
  %15 = sext i8 %14 to i32
  %16 = icmp eq i32 %15, 95
  br i1 %16, label %17, label %19

17:                                               ; preds = %12
  %18 = load i8*, i8** %2, align 8
  store i8 32, i8* %18, align 1
  br label %19

19:                                               ; preds = %17, %12
  %20 = load i32, i32* %3, align 4
  switch i32 %20, label %54 [
    i32 128, label %21
    i32 129, label %34
  ]

21:                                               ; preds = %19
  %22 = load i8*, i8** %2, align 8
  %23 = load i8, i8* %22, align 1
  %24 = sext i8 %23 to i32
  %25 = icmp sge i32 %24, 65
  br i1 %25, label %26, label %32

26:                                               ; preds = %21
  %27 = load i8*, i8** %2, align 8
  %28 = load i8, i8* %27, align 1
  %29 = sext i8 %28 to i32
  %30 = icmp sle i32 %29, 90
  br i1 %30, label %31, label %32

31:                                               ; preds = %26
  store i32 129, i32* %3, align 4
  br label %33

32:                                               ; preds = %26, %21
  store i32 128, i32* %3, align 4
  br label %33

33:                                               ; preds = %32, %31
  br label %54

34:                                               ; preds = %19
  %35 = load i8*, i8** %2, align 8
  %36 = load i8, i8* %35, align 1
  %37 = sext i8 %36 to i32
  %38 = icmp sge i32 %37, 65
  br i1 %38, label %39, label %52

39:                                               ; preds = %34
  %40 = load i8*, i8** %2, align 8
  %41 = load i8, i8* %40, align 1
  %42 = sext i8 %41 to i32
  %43 = icmp sle i32 %42, 90
  br i1 %43, label %44, label %52

44:                                               ; preds = %39
  %45 = load i8*, i8** %2, align 8
  %46 = load i8, i8* %45, align 1
  %47 = sext i8 %46 to i32
  %48 = sub nsw i32 %47, 65
  %49 = add nsw i32 %48, 97
  %50 = trunc i32 %49 to i8
  %51 = load i8*, i8** %2, align 8
  store i8 %50, i8* %51, align 1
  br label %53

52:                                               ; preds = %39, %34
  store i32 128, i32* %3, align 4
  br label %53

53:                                               ; preds = %52, %44
  br label %54

54:                                               ; preds = %19, %53, %33
  %55 = load i8*, i8** %2, align 8
  %56 = getelementptr inbounds i8, i8* %55, i32 1
  store i8* %56, i8** %2, align 8
  br label %8

57:                                               ; preds = %6, %8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
